--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Dist-Zilla-Plugin-Prereqs-EnsureVersion
 
-0.01     2016-01-19 (PERLANCAR) (unreleased)
+0.01     2016-01-19 (PERLANCAR)
 
          - First release.
