--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.02     2017-07-04 (PERLANCAR)
+
+         - Do not die on missing ~/pmversions.ini [thanks José Joaquín Atria].
+
+
 0.01     2016-01-19 (PERLANCAR)
 
          - First release.
