--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.03    2017-07-07 (PERLANCAR)
+
+	- Switch from (ab)using InstallTool phase to using AfterBuild phase
+	  to do our stuffs, to be compatible with DZP:StaticInstall.
+
+
 0.02     2017-07-04 (PERLANCAR)
 
          - Do not die on missing ~/pmversions.ini [thanks José Joaquín Atria].
